Fix mobile menu bottom cutoff and org menu overflow (#3149)

--- a/app/assets/stylesheets/revised/sections/primary_header_nav.scss
+++ b/app/assets/stylesheets/revised/sections/primary_header_nav.scss
@@ -234,13 +234,13 @@ $mainmenu-open-zindex: 10;
       position: fixed;
       right: 0;
       top: 4 * $vertical-height;
+      bottom: 0;
       transform: translate(100%, 0);
       width: $mainmenu-width;
-      height: 100vh;
       transition: transform $mainmenu-transform-speed linear;
       z-index: $mainmenu-open-zindex;
       overflow-y: auto;
-      padding: (2 * $vertical-height) 0 100px;
+      padding: (2 * $vertical-height) 0 (4 * $vertical-height);
     }
 
     .primary-nav-item {
@@ -275,6 +275,12 @@ $mainmenu-open-zindex: 10;
 
     .primary-submenu {
       padding-left: 0;
+    }
+
+    .current-organization-submenu {
+      min-width: 0;
+      width: calc(100vw - 30px);
+      max-width: 400px;
     }
 
     #menu-opened-backdrop {
@@ -326,8 +332,12 @@ $mainmenu-open-zindex: 10;
 }
 
 @media (max-width: $grid-breakpoint-sm) {
+  // Cover up the nav item text and lines, so it scrolls under the hamburgler
+  // Don't break line on small screens
+  // NOTE: this isn't perfect - on bigger screens some of the line's visible to the right. good enuff
   .primary-header-nav.menu-in .hamburgler {
-    padding-right: 50%; // Don't break line on small screens
+    padding-right: 70%;
+    padding-left: 2%;
   }
 }
 
